# AegisOS

./: .gitignore  .replit  ADVANCED_FEATURES.md  AEGIS_OS_SECURITY_AUDIT_REPORT.md  API_EXAMPLES.md  API_REFERENCE.md  AUTOMATION_LIBRARY.md  BUILD_INSTRUCTIONS.md  CLI_TOOL_REFERENCE.md  COMPLIANCE_GUIDE.md  CONTRIBUTING.md  DATABASE_SCHEMA.sql  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_CHECKLIST.md  FEATURES_MATRIX.md  FINAL_CHECKLIST.md  FINAL_STATS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_CHECKLIST.md  FREELANCER_JOB_POSTING.md  LICENSE  LIGHTWEIGHT_OPTIMIZATION.md  OPTIMIZATION_GUIDE.md  PENETRATION_TESTING_GUIDE.md  PREMIUM_FEATURES.md  PROJECT_SUMMARY.txt  QUICKSTART.md  QUICKSTART.txt  QUICK_START.md  README.md  SECURITY.md  SECURITY_100_CHECKLIST.md  SECURITY_AUDIT.md  SECURITY_FINAL_REPORT.md  SERVER_ADVANCED.md  SERVER_COMPLETE.md  SERVER_DEPLOYMENT.md  SERVER_FEATURES.md  TECHNICAL_SPEC.md  TECHNICAL_SPECIFICATION.md  (+12 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
AegisOSRepo/: README.md
aegis-os-ai-dev/: README.md  build.sh
aegis-os-basic/: BASIC_EDITION.md  README.md  build.sh  buildroot-config-detailed.txt
aegis-os-core/: README.md
aegis-os-freemium/: BUILD_BOOTABLE_ISO.md  FREEMIUM_BUILD_GUIDE.md  QUICK_BUILD.sh  README.md  build-replit.py  build.sh  buildroot-config-detailed.txt  obfuscate.py  post-build.sh  test-simulation.py
aegis-os-gamer/: GAMER_EDITION.md  README.md  build.sh  gaming-kernel.config  post-build.sh
aegis-os-server/: README.md  build.sh
aegis-sdk-rust/: Cargo.toml
aegis-sdk-rust/src/: lib.rs  models.rs
build-system/: build.sh  (+22 more)
(+688 files in other folders)
