[package]
name = "aegis-os-sdk"
version = "2.0.0"
edition = "2021"
description = "Official Rust SDK for Aegis OS API"
repository = "https://github.com/aegis-os/sdk-rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
